fix: fixing table overflow ad setting table - upsert

--- a/src/assets/styles/components/_table.scss
+++ b/src/assets/styles/components/_table.scss
@@ -1,6 +1,7 @@
 .ahm-table {
     width: 100%;
     overflow-x: auto;
+    overflow-y: auto;
     table {
         width: 100%;
         border-collapse: collapse;
